--- a/src/components/CustomCard/CustomCard.module.css
+++ b/src/components/CustomCard/CustomCard.module.css
@@ -5,7 +5,7 @@
   -moz-box-shadow: 0px 3px 17px 10px rgba(0, 0, 0, 0.75);
   box-shadow: 0px 3px 17px 10px rgba(0, 0, 0, 0.75);
   width: 100%;
-  background-color: #fff;
+  /* background-color: #fff; */
   color: black;
   border-radius: 5px;
 }
