Added data structure for showing dynamic blog

--- a/src/components/Code/CodeComponent.module.css
+++ b/src/components/Code/CodeComponent.module.css
@@ -1,22 +1,20 @@
 .mainCode {
-  width: 100%;
-  color: "crimson";
-  background-color: #d1d1d1;
-  /* padding: 2px; */
-  font-size: 80%;
-  width: 100%;
-  font-family: Consolas, "courier new";
-  border-radius: 5px;
+   /* width: 100%; */
+   color: "crimson";
+   background-color: #d1d1d1;
+   font-size: 80%;
+   font-family: Consolas, "courier new";
+   border-radius: 5px;
 }
 
 .copyIcon {
-  width: 100%;
-  text-align: end;
-  background-color: #181e3f;
-  border-bottom: 1px solid black;
-  padding: 5px;
-  align-items: center;
+   width: 100%;
+   text-align: end;
+   background-color: #181e3f;
+   border-bottom: 1px solid black;
+   padding: 5px;
+   align-items: center;
 }
 .code {
-  padding: 20px;
+   padding: 20px;
 }
